implemented auth and user testing
