# internal/docs/swagger.json
@@ -51,6 +51,11 @@
         },
         "/api/v1/competitions/{id}/matches": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retorna as partidas de uma competição pelo ID, podendo filtrar por rodada e equipe.",
                 "consumes": [
                     "application/json"
